src/gesturePub/logs/drone_com/build.make.008.log.stderr
/home/skanda/Documents/workspace/gesturePub/src/drone_com/src/square.cpp: In function ‘void command(std_msgs::Int16&)’:
/home/skanda/Documents/workspace/gesturePub/src/drone_com/src/square.cpp:8:31: error: no matching function for call to ‘std_msgs::Int16_<std::allocator<void> >::Int16_(int)’
    8 |   if (msg == std_msgs::Int16(1)){
      |                               ^
In file included from /home/skanda/Documents/workspace/gesturePub/src/drone_com/src/square.cpp:4:
/opt/ros/noetic/include/std_msgs/Int16.h:29:3: note: candidate: ‘std_msgs::Int16_<ContainerAllocator>::Int16_(const ContainerAllocator&) [with ContainerAllocator = std::allocator<void>]’
   29 |   Int16_(const ContainerAllocator& _alloc)
      |   ^~~~~~
/opt/ros/noetic/include/std_msgs/Int16.h:29:36: note:   no known conversion for argument 1 from ‘int’ to ‘const std::allocator<void>&’
   29 |   Int16_(const ContainerAllocator& _alloc)
      |          ~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~
/opt/ros/noetic/include/std_msgs/Int16.h:26:3: note: candidate: ‘std_msgs::Int16_<ContainerAllocator>::Int16_() [with ContainerAllocator = std::allocator<void>]’
   26 |   Int16_()
      |   ^~~~~~
/opt/ros/noetic/include/std_msgs/Int16.h:26:3: note:   candidate expects 0 arguments, 1 provided
/opt/ros/noetic/include/std_msgs/Int16.h:22:8: note: candidate: ‘constexpr std_msgs::Int16_<std::allocator<void> >::Int16_(const std_msgs::Int16_<std::allocator<void> >&)’
   22 | struct Int16_
      |        ^~~~~~
/opt/ros/noetic/include/std_msgs/Int16.h:22:8: note:   no known conversion for argument 1 from ‘int’ to ‘const std_msgs::Int16_<std::allocator<void> >&’
/opt/ros/noetic/include/std_msgs/Int16.h:22:8: note: candidate: ‘constexpr std_msgs::Int16_<std::allocator<void> >::Int16_(std_msgs::Int16_<std::allocator<void> >&&)’
/opt/ros/noetic/include/std_msgs/Int16.h:22:8: note:   no known conversion for argument 1 from ‘int’ to ‘std_msgs::Int16_<std::allocator<void> >&&’
/home/skanda/Documents/workspace/gesturePub/src/drone_com/src/square.cpp: At global scope:
/home/skanda/Documents/workspace/gesturePub/src/drone_com/src/square.cpp:37:1: error: expected declaration before ‘}’ token
   37 | }
      | ^
In file included from /opt/ros/noetic/include/ros/subscription_callback_helper.h:35,
                 from /opt/ros/noetic/include/ros/subscriber.h:33,
                 from /opt/ros/noetic/include/ros/node_handle.h:33,
                 from /opt/ros/noetic/include/ros/ros.h:45,
                 from /home/skanda/Documents/workspace/gesturePub/src/drone_com/include/drone_com/gnc_functions.hpp:14,
                 from /home/skanda/Documents/workspace/gesturePub/src/drone_com/src/square.cpp:1:
/opt/ros/noetic/include/ros/parameter_adapter.h: In instantiation of ‘static ros::ParameterAdapter<M>::Parameter ros::ParameterAdapter<M>::getParameter(const Event&) [with M = std_msgs::Int16_<std::allocator<void> >&; ros::ParameterAdapter<M>::Parameter = std_msgs::Int16_<std::allocator<void> >&; ros::ParameterAdapter<M>::Event = ros::MessageEvent<const std_msgs::Int16_<std::allocator<void> > >; typename boost::remove_reference<typename boost::remove_const<M>::type>::type = std_msgs::Int16_<std::allocator<void> >]’:
/opt/ros/noetic/include/ros/subscription_callback_helper.h:144:48:   required from ‘void ros::SubscriptionCallbackHelperT<P, Enabled>::call(ros::SubscriptionCallbackHelperCallParams&) [with P = std_msgs::Int16_<std::allocator<void> >&; Enabled = void]’
/opt/ros/noetic/include/ros/subscription_callback_helper.h:141:16:   required from here
/opt/ros/noetic/include/ros/parameter_adapter.h:78:30: error: binding reference of type ‘ros::ParameterAdapter<std_msgs::Int16_<std::allocator<void> >&>::Parameter’ {aka ‘std_msgs::Int16_<std::allocator<void> >&’} to ‘const std_msgs::Int16_<std::allocator<void> >’ discards qualifiers
   78 |     return *event.getMessage();
      |                              ^
make[2]: *** [CMakeFiles/square.dir/build.make:63: CMakeFiles/square.dir/src/square.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:210: CMakeFiles/square.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
